Speed up transitions + avoid overflow when changing chapters

--- a/src/styles/scss/_pagecontent.scss
+++ b/src/styles/scss/_pagecontent.scss
@@ -1,6 +1,6 @@
 .h5p-digibook-chapter {
   max-width: 1000px;
-  transition: 0.5s;
+  transition: 0.25s;
   z-index: -1;
 
   }
