--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -8,6 +8,7 @@ $background-color: #ffffff;
 }
 
 .h5p-digibook-main {
+  overflow: hidden;
   display: flex;
   flex: 1;
 }
